--- a/myfiles/c3/index3-02-1.html
+++ b/myfiles/c3/index3-02-1.html
@@ -5,9 +5,10 @@
     <title>猫の実態</title>
     <meta name="description" content="猫の好きなもの、日々の生活をご紹介">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>猫の1日</h1>
+    <h1>猫の1日 cat's day ... sleeps all day</h1>
     <h2>ひたすらねています</h2>
     <p>起きたら魚を食べます</p>
 
