--- a/myfiles/c3/index3-02-1.html
+++ b/myfiles/c3/index3-02-1.html
@@ -8,15 +8,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>猫の1日 cat's day ... sleeps all day</h1>
-    <h2>ひたすらねています</h2>
-    <p>起きたら魚を食べます</p>
-
     <div>
-      <p>まんまる子猫</p>
+      <h1>猫の1日 cat's day ... sleeps all day</h1>
+      <h2>ひたすらねています</h2>
+      <p>猫は毎日12時間〜16時間は睡眠を取ると言われています。ただし、熟睡している時間は意外と少なくほとんどが浅い眠りです。物音がするとすぐ目を覚ますのはそのせいなんですね</p>
     </div>
 
+    <p>起きたら魚を食べます</p>
+
+    <p>まんまる子猫</p>
+
     <p>のんびり子猫</p>
+
+    <ul>
+      <li>HTMLの基礎</li>
+      <li>CSSの基礎</li>
+      <li>デザインの基礎</li>
+    </ul>
 
   </body>
 </html>
