--- a/myfiles/c3/index3-02-1.html
+++ b/myfiles/c3/index3-02-1.html
@@ -8,23 +8,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div id="first">
       <h1>猫の1日 cat's day ... sleeps all day</h1>
       <h2>ひたすらねています</h2>
       <p>猫は毎日12時間〜16時間は睡眠を取ると言われています。ただし、熟睡している時間は意外と少なくほとんどが浅い眠りです。物音がするとすぐ目を覚ますのはそのせいなんですね</p>
     </div>
 
-    <p>起きたら魚を食べます</p>
 
-    <p>まんまる子猫</p>
+    <p>灰色の猫: idを指定しないならそのままCSSのpが反映される</p>
+    <p class="blue">青色の大猫: classをblueに指定しているのでpだが文字の色が青色になる</p>
+    <p id="orange">山吹色の猫: idをorangeに指定しているのでpだが文字の色が山吹色になる</p>
 
-    <p>のんびり子猫</p>
+    <h3 class="pink">ピンク色になりたかったけどなれなかった猫</h3>
+    <h3 class="pink">CSSが.pinkならなれてp.pinkならなれない</h3>
+    <p class="pink">ピンク色になれた猫</p>
 
     <ul>
       <li>HTMLの基礎</li>
       <li>CSSの基礎</li>
       <li>デザインの基礎</li>
+      <li>プログラミングの基礎</li>
     </ul>
+
+      <ul>
+        <li class="pika">猫じゃないよ</li>
+        <li class="iv">猫じゃないよ</li>
+      </ul>
+
+      <div id="container">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">7</div>
+        <div class="item">8</div>
+        <div class="item">9</div>
+      </div>
 
   </body>
 </html>
