--- a/myfiles/c3/index3-02-1.html
+++ b/myfiles/c3/index3-02-1.html
@@ -40,12 +40,32 @@
         <div class="item">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
-        <div class="item">9</div>
       </div>
 
-  </body>
+      <div id="container2">
+        <div class="item2">1</div>
+        <div class="item2">2</div>
+        <div class="item2">3</div>
+        <div class="item2">4</div>
+        <div class="item2">5</div>
+        <div class="item2">6</div>
+        <div class="item2">7</div>
+        <div class="item2">8</div>
+        <div class="item2">9</div>
+      </div>
+
+      <div id="container3">
+        <div class="item3">1</div>
+        <div class="item3">3</div>
+        <div class="item3">3</div>
+        <div class="item3">4</div>
+        <div class="item3">5</div>
+        <div class="item3">6</div>
+        <div class="item3">7</div>
+        <div class="item3">8</div>
+        <div class="item3">9</div>
+      </div>
+
+
+  <bod>
 </html>
