--- a/myfiles/c3/index3-02-1.html
+++ b/myfiles/c3/index3-02-1.html
@@ -64,6 +64,7 @@
         <div class="item3">7</div>
         <div class="item3">8</div>
         <div class="item3">9</div>
+        <div class="item3">9</div>
       </div>
 
 
